--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
 
 	<dependencies>
 	<!-- for jdbc -->
@@ -28,5 +36,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+	<dependency>
+   		 <groupId>log4j</groupId>
+   		 <artifactId>log4j</artifactId>
+   		 <version>1.2.17</version>
+	</dependency>
+		
+		
 	</dependencies>
 </project>
