--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,11 +15,9 @@
  
   <display-name>WebCalculator</display-name>
    <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+   <!-- <welcome-file>index.html</welcome-file> -->
+ 	   <welcome-file>index.jsp</welcome-file>
+    <!--<welcome-file>default.htm</welcome-file>-->
+       <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
