edded jsp files for registration and login/logout

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,9 +15,7 @@
  
   <display-name>WebCalculator</display-name>
    <welcome-file-list>
-   <!-- <welcome-file>index.html</welcome-file> -->
- 	   <welcome-file>index.jsp</welcome-file>
-    <!--<welcome-file>default.htm</welcome-file>-->
-       <welcome-file>default.jsp</welcome-file>
+  	<!-- 	<welcome-file>inde.html</welcome-file> -->
+ 	 	<welcome-file>index.jsp</welcome-file> 
   </welcome-file-list>
 </web-app>
