--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.3.jar/mysql-connector-java-5.1.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
